--- a/myCSS.css
+++ b/myCSS.css
@@ -40,3 +40,11 @@ li.page-item a {
 .btn-modal {
     margin: 10px 0px 10px 20px;
 }
+
+/* image
+---------------------------- */
+
+.flag{
+    height:24px;
+    width:40px;
+}
