--- a/Styles/myCSS.css
+++ b/Styles/myCSS.css
@@ -1,4 +1,5 @@
-﻿body {
+﻿
+body {
     font-family: 'Open Sans', sans-serif;
     margin: 60px 0 60px 0;
 }
@@ -48,3 +49,19 @@ li.page-item a {
     height:24px;
     width:40px;
 }
+
+.bigger-on-hover {
+    transition: all 0.3s ease;
+}
+
+.bigger-on-hover:hover {
+    transform: scale(1.5);
+}
+
+.darkToggle{
+border:1px solid black;
+border-radius: 5px;
+font-size: 0.85rem;
+}
+
+
