--- a/Styles/myCSS.css
+++ b/Styles/myCSS.css
@@ -65,3 +65,9 @@ font-size: 0.85rem;
 }
 
 
+.competitions-img{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    justify-content: left;
+}
