--- a/Styles/myCSS.css
+++ b/Styles/myCSS.css
@@ -280,3 +280,14 @@ font-size: 0.85rem;
     left: 4px;
   }
 }
+
+.cards {
+  margin:10px
+
+}
+
+.cardImage{
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
+}
