--- a/Styles/myCSS.css
+++ b/Styles/myCSS.css
@@ -67,6 +67,8 @@ font-size: 0.85rem;
 .card-dark{
     background-color: #212529;
     color:white;
+    height: 100%;
+    width: 100%;
 }
 
 
@@ -123,4 +125,19 @@ font-size: 0.85rem;
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.card{
+    
+    border-radius: 4px;
+    background: #fff;
+    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+      transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+  padding: 14px 80px 18px 36px;
+  cursor: pointer;
+}
+
+.card:hover{
+     transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
