--- a/Styles/myCSS.css
+++ b/Styles/myCSS.css
@@ -122,9 +122,10 @@ font-size: 0.85rem;
 
 
 .card > img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .card{
@@ -133,7 +134,7 @@ font-size: 0.85rem;
     background: #fff;
     box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
       transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-  padding: 14px 80px 18px 36px;
+  padding: 0;
   cursor: pointer;
 }
 
