--- a/Styles/myCSS.css
+++ b/Styles/myCSS.css
@@ -128,12 +128,12 @@ font-size: 0.85rem;
 }
 
 .card{
-    
-    border-radius: 4px;
+    top:0px;
+    left:0px;
     background: #fff;
     box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
-      transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-  padding: 14px 80px 18px 36px;
+    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+  
   cursor: pointer;
 }
 
