--- a/Styles/myCSS.css
+++ b/Styles/myCSS.css
@@ -120,15 +120,16 @@ font-size: 0.85rem;
 
 
 
+/* Card Animated */
 
-.card > img {
+.cardAnimated > img {
     padding: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.card{
+.cardAnimated{
     top:0px;
     left:0px;
     background: #fff;
@@ -137,13 +138,26 @@ font-size: 0.85rem;
   cursor: pointer;
 }
 
-.card:hover{
+.cardAnimated:hover{
      transform: scale(1.05);
   box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
 
 
-/* CSS Styles */
+
+/* Card Details */
+.cardDetails {
+    border: none;
+    box-shadow: none;
+}
+.bodyDetails {
+    display:flex;
+    justify-content: space-between;
+    height: fit-content;
+} 
+
+
+/* Autocomplete */
 .ui-autocomplete {
     z-index: 9999;
     max-height: 400px;
@@ -164,4 +178,4 @@ font-size: 0.85rem;
     background-color: #eee;
   }
 
-  
+
