AthleteDetails quase feito, agr é so deixar mais bonitinho

--- a/Styles/myCSS.css
+++ b/Styles/myCSS.css
@@ -155,7 +155,9 @@ font-size: 0.85rem;
     justify-content: space-between;
     height: fit-content;
 } 
-
+.infos > div{
+    padding: 5px;
+}
 
 /* Autocomplete */
 .ui-autocomplete {
