--- a/Styles/myCSS.css
+++ b/Styles/myCSS.css
@@ -1,5 +1,4 @@
-﻿
-body {
+﻿body {
     font-family: 'Open Sans', sans-serif;
     margin: 60px 0 60px 0;
 }
@@ -12,22 +11,23 @@ body {
     border-color: #ccc;
 }
 
-    .btn-default:focus {
-        color: #333;
-        background-color: #e6e6e6;
-        border-color: #8c8c8c;
-    }
+.btn-default:focus {
+    color: #333;
+    background-color: #e6e6e6;
+    border-color: #8c8c8c;
+}
 
-    .btn-default:active,
-    .btn-default:hover {
-        color: #333;
-        background-color: #e6e6e6;
-        border-color: #adadad;
-    }
+.btn-default:active,
+.btn-default:hover {
+    color: #333;
+    background-color: #e6e6e6;
+    border-color: #adadad;
+}
 
 /* button-xs
 ---------------------------- */
-.btn-group-xs > .btn, .btn-xs {
+.btn-group-xs>.btn,
+.btn-xs {
     padding: 1px 5px;
     font-size: 12px;
     line-height: 1.5;
@@ -45,9 +45,9 @@ li.page-item a {
 /* image
 ---------------------------- */
 
-.flag{
-    height:24px;
-    width:40px;
+.flag {
+    height: 24px;
+    width: 40px;
 }
 
 .bigger-on-hover {
@@ -58,21 +58,21 @@ li.page-item a {
     transform: scale(1.5);
 }
 
-.darkToggle{
-border:1px solid black;
-border-radius: 5px;
-font-size: 0.85rem;
+.darkToggle {
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: 0.85rem;
 }
 
-.card-dark{
+.card-dark {
     background-color: #212529;
-    color:white;
+    color: white;
     height: 100%;
     width: 100%;
 }
 
 
-.competitions-img{
+.competitions-img {
     height: 100px;
     width: 100px;
     border-radius: 50%;
@@ -80,40 +80,37 @@ font-size: 0.85rem;
 }
 
 
-  .dark-mode{
-    color:white;
+.dark-mode {
+    color: white;
     background-color: #212529;
-  }
-  .nav-items-dark{
-    color:white;
-  }
+}
+
+.nav-items-dark {
+    color: white;
+}
 
 
-.pagination > li > a
-{
+.pagination>li>a {
     background-color: white;
     color: #5A4181;
 }
 
-.pagination > li > a:focus,
-.pagination > li > a:hover,
-.pagination > li > span:focus,
-.pagination > li > span:hover
-{
+.pagination>li>a:focus,
+.pagination>li>a:hover,
+.pagination>li>span:focus,
+.pagination>li>span:hover {
     color: #5a5a5a;
     background-color: #eee;
     border-color: #ddd;
 }
 
-.pagination > .active > a
-{
+.pagination>.active>a {
     color: white;
     background-color: #5A4181 !Important;
     border: solid 1px #5A4181 !Important;
 }
 
-.pagination > .active > a:hover
-{
+.pagination>.active>a:hover {
     background-color: #5A4181 !Important;
     border: solid 1px #5A4181;
 }
@@ -122,25 +119,25 @@ font-size: 0.85rem;
 
 /* Card Animated */
 
-.cardAnimated > img {
+.cardAnimated>img {
     padding: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.cardAnimated{
-    top:0px;
-    left:0px;
+.cardAnimated {
+    top: 0px;
+    left: 0px;
     background: #fff;
-    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
-    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-  cursor: pointer;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, .08), 0 0 6px rgba(0, 0, 0, .05);
+    transition: .3s transform cubic-bezier(.155, 1.105, .295, 1.12), .3s box-shadow, .3s -webkit-transform cubic-bezier(.155, 1.105, .295, 1.12);
+    cursor: pointer;
 }
 
-.cardAnimated:hover{
-     transform: scale(1.05);
-  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+.cardAnimated:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
 }
 
 
@@ -150,12 +147,14 @@ font-size: 0.85rem;
     border: none;
     box-shadow: none;
 }
+
 .bodyDetails {
-    display:flex;
+    display: flex;
     justify-content: space-between;
     height: fit-content;
-} 
-.infos > div{
+}
+
+.infos>div {
     padding: 5px;
 }
 
@@ -168,16 +167,15 @@ font-size: 0.85rem;
     overflow-x: hidden;
     /* add padding to account for vertical scrollbar */
     padding-right: 20px;
-  }
- 
-  /* style the suggestion list items */
-  .ui-autocomplete > li {
+}
+
+/* style the suggestion list items */
+.ui-autocomplete>li {
     padding: 10px;
     font-size: 16px;
     border-bottom: 1px solid #ccc;
-  }
-  .ui-autocomplete > li.ui-state-focus {
+}
+
+.ui-autocomplete>li.ui-state-focus {
     background-color: #eee;
-  }
-
-
+}
