--- a/Styles/myCSS.css
+++ b/Styles/myCSS.css
@@ -240,3 +240,9 @@ li.page-item a {
     background-color: #474e5d;
     color: white;
 }
+
+
+#Subscribe:hover {
+    text-shadow: 0 0 3px rgb(102, 176, 240), 0 0 7px rgb(102, 176, 240), 0 0 20px rgb(102, 176, 240);color:rgb(102, 176, 240);
+    transition:0.5s
+}
